--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "universal-cookie": "^4.0.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "zen-observable-ts": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
