--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^1.2.21",
     "@aws-sdk/client-cloudwatch": "^3.38.0",
+    "@aws-sdk/client-cloudwatch-logs": "^3.38.0",
     "@aws-sdk/client-cognito-identity": "^3.38.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.38.0",
     "@aws-sdk/credential-provider-node": "^3.38.0",
