--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "aws-amplify": "^1.3.3",
+    "aws-amplify": "^4.3.3",
     "isomorphic-unfetch": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^0.9.5",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2",
     "zen-observable-ts": "^1.1.0"
